Small Error Solved

--- a/views/all-quatations-send.ejs
+++ b/views/all-quatations-send.ejs
@@ -76,7 +76,7 @@
                         <h6 class="card-subtitle mb-2 text-muted">Vendors Name: <%= quatation.vendor_name %></h6>
                         <h6 class="card-subtitle mb-2 text-muted">Vendor Address: <%= quatation.email %></h6>
                         <h6 class="card-subtitle mb-2 text-muted">Vendor Phone Number: <%= quatation.phone %></h6>
-                        <h6 class="card-subtitle mb-2 text-muted">Quatation ID: <%= quatation.id %></h6>
+                        <h6 class="card-subtitle mb-2 text-muted">Quatation Number: <%= quatation.quatation_number %></h6>
                         <a href="<%= quatation.quatation_URL %>" target="_blank" download class="card-link">
                             <i class="fas fa-download"></i>
                             Download the Quatation
